--- a/DockerFile
+++ b/DockerFile
@@ -4,7 +4,7 @@ RUN apt update -y && apt install awscli -y
 WORKDIR /app
 
 COPY . /app
-RUN pip install mysqlclient‑1.3.13‑cp37‑cp37m‑win_amd64.whl
+RUN pip install mysqlclient-1.4.6-cp37-cp37m-win_amd64.whl
 RUN pip install -r final_requirements.txt
 RUN python -m spacy download en_core_web_sm
 
