--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,8 @@
 FROM python:3.8-slim-buster
 
-RUN apt update -y && apt install awscli -y
-RUN apt-get update && apt-get install -y default-mysql-client default-libmysqlclient-dev
+RUN apt update -y && apt install -y pkg-config libmariadb-dev build-essential
+RUN apt install awscli -y
+
 WORKDIR /app
 
 COPY . /app
