--- a/DockerFile
+++ b/DockerFile
@@ -3,10 +3,12 @@ FROM python:3.8-slim-buster
 RUN apt update -y && apt install -y pkg-config libmariadb-dev build-essential
 RUN apt install awscli -y
 
+EXPOSE 8501
+
 WORKDIR /app
 
 COPY . /app
 RUN pip install -r final_requirements.txt
 RUN python -m spacy download en_core_web_sm
 
-CMD ["python3", "summary.py"]
+ENTRYPOINT ["streamlit", "run", "summary.py", "--sever.port=8501", "--server.address=0.0.0.0"]
