--- a/DockerFile
+++ b/DockerFile
@@ -11,4 +11,4 @@ COPY . /app
 RUN pip install -r final_requirements.txt
 RUN python -m spacy download en_core_web_sm
 
-ENTRYPOINT ["streamlit", "run", "summary.py", "--sever.port=8501", "--server.address=0.0.0.0"]
+ENTRYPOINT ["streamlit", "run", "summary.py", "--server.port=8501"]
