--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,3 +100,20 @@ jobs:
       - name: Clean previous images and containers
         run: |
          docker system prune -f
+
+      - name: Check OpenAI API Key
+          on:
+            workflow_dispatch:
+        
+          permissions:
+            id-token: write
+            contents: read
+        
+          jobs:
+            check-api-key:
+              name: Check OpenAI API Key
+              runs-on: ubuntu-latest
+              steps:
+                - name: Debug OpenAI API Key
+                  run: |
+                    echo "OpenAI API Key: $OPENAI_API_KEY"
