--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,7 +102,7 @@ jobs:
           -e "AWS_REGION=${{ secrets.AWS_REGION }}" \
           -e "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" \
           ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
+# run
       - name: Clean previous images and containers
         run: |
          docker system prune -f
